fix some spacing

--- a/_mockUp/src/jade/contact.jade
+++ b/_mockUp/src/jade/contact.jade
@@ -19,22 +19,22 @@ block content
                 div.inline-block.form__element
                     label(for="nomQuestion").hightlight.label__text
                         | Nom
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="nomQuestion" type="text" placeholder="Doe").input__text
                 div.inline-block.form__element
                     label(for="prenomQuestion").hightlight.label__text
                         | Prénom
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="prenomQuestion" type="text" placeholder="John").input__text
                 div.inline-block.form__element
                     label(for="sujetQuestion").hightlight.label__text
                         | Sujet
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="sujetQuestion" type="text" placeholder="Votre question").input__text
                 div.inline-block.form__element
                     label(for="mailQuestion").hightlight.label__text
                         | Mail
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="mailQuestion" type="text" placeholder="johndoe@gmail.com").input__text
                 div.block.form__element--fullSize
                     label(for="msgQuestion").hightlight.label__text Votre message
@@ -43,7 +43,7 @@ block content
                     input(type="submit" value="Envoyez").input__submit
                     label.hightlight.label__text
                         | Tous les champs munis d’un astérisque
-                        span.asterisque  (*)
+                        span.span--spacing.asterisque (*)
                         | sont obligatoires
 
     div.parallax__img.parallax__img--twenty
@@ -54,37 +54,37 @@ block content
                 div.inline-block.form__element
                     label(for="nomRestaurant").hightlight.label__text
                         | Nom du restaurant
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="nomRestaurant" type="text" placeholder="La Bonne Fourchette").input__text
                 div.inline-block.form__element
                     label(for="nomResponsable").hightlight.label__text
                         | Nom du responsable
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="nomResponsable" type="text" placeholder="Doe").input__text
                 div.inline-block.form__element
                     label(for="prenomResponsable").hightlight.label__text
                         | Prénom du responsable
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="prenomResponsable" type="text" placeholder="John").input__text
                 div.inline-block.form__element
                     label(for="addressRestaurant").hightlight.label__text
                         | Adresse
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="addressRestaurant" type="text" placeholder="Rue de la Province, n° 10").input__text
                 div.inline-block.form__element
                     label(for="villeRestaurant").hightlight.label__text
                         | Ville
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="villeRestaurant" type="text" placeholder="Liège").input__text
                 div.inline-block.form__element
                     label(for="postalRestaurant").hightlight.label__text
                         | Code Postal
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="postalRestaurant" type="text" placeholder="4400").input__text
                 div.inline-block.form__element
                     label(for="telRestaurant").hightlight.label__text
                         | Tel ou GSM
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="telRestaurant" type="text" placeholder="0498 32 72 89").input__text
                 div.inline-block.form__element
                     label(for="faxRestaurant").hightlight.label__text Fax
@@ -92,12 +92,12 @@ block content
                 div.inline-block.form__element
                     label(for="mailRestaurant").hightlight.label__text
                         | Mail
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="mailRestaurant" type="text" placeholder="johndoe@gmail.com").input__text
                 div.inline-block.form__element
                     label(for="confirmMailRestaurant").hightlight.label__text
                         | Confirmer mail
-                        span.asterisque  *
+                        span.span--spacing.asterisque *
                     input(id="confirmMailRestaurant" type="text" placeholder="johndoe@gmail.com").input__text
                 div.block.form__element--fullSize
                     label(for="msgRestaurant").hightlight.label__text Votre message
@@ -106,7 +106,7 @@ block content
                     input(type="submit" value="Inscrivez votre restaurant !").input__submit
                     label.hightlight.label__text
                         | Tous les champs munis d’un astérisque
-                        span.asterisque  (*) 
+                        span.span--spacing.asterisque (*)
                         | sont obligatoires
 
     div.parallax__img.parallax__img--twenty-one
