--- a/_mockUp/src/styl/ITCSS/base/_base.paragraph.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.paragraph.styl
@@ -13,3 +13,6 @@
 // Comportements of all my paragraph
 p
     rem-fallback( margin-bottom, 12px )
+
+.span--spacing
+    rem-fallback( padding, 0 4px )
