--- a/_mockUp/src/styl/ITCSS/components/_components.gallery.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.gallery.styl
@@ -4,18 +4,17 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #BASE PARAGRAPH
+//    #COMPONENTS GALLERY
 //\*------------------------------------*/
 
 
 
 
-// Comportements of all my paragraph
-p
+// Style for show gallery
+.gallery
+    width: 20%
+    rem-fallback( padding, 8px )
+.gallery__img
+    width 100%
     rem-fallback( margin-bottom, 12px )
-
-dt
-    rem-fallback( padding, 8px 0 4px 0)
-
-.span--spacing
-    rem-fallback( padding, 0 4px )
+    rem-fallback( max-height, 125px )
