--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -245,6 +245,10 @@ p {
   margin-bottom: 12px;
   margin-bottom: 0.75rem;
 }
+dt {
+  padding: 8px 0 4px 0;
+  padding: 0.5rem 0rem 0.25rem 0rem;
+}
 .span--spacing {
   padding: 0 4px;
   padding: 0rem 0.25rem;
@@ -1246,10 +1250,8 @@ h6:first-child,
 */
 .thumbnails {
   width: 33.333333%;
-  max-height: 300px;
-  max-height: 18.75rem;
-  padding: 16px 8px;
-  padding: 1rem 0.5rem;
+  padding: 16px 24px;
+  padding: 1rem 1.5rem;
   margin-bottom: 24px;
   margin-bottom: 1.5rem;
   -webkit-transition: all 0.25s;
@@ -1262,8 +1264,27 @@ h6:first-child,
 }
 .thumbnails__img {
   width: 100%;
+  margin-bottom: 6px;
+  margin-bottom: 0.375rem;
   max-height: 210px;
   max-height: 13.125rem;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
+.gallery {
+  width: 20%;
+  padding: 8px;
+  padding: 0.5rem;
+}
+.gallery__img {
+  width: 100%;
+  margin-bottom: 12px;
+  margin-bottom: 0.75rem;
+  max-height: 125px;
+  max-height: 7.8125rem;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
