--- a/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.thumbnails.styl
@@ -13,12 +13,12 @@
 // Style for show thumbnail
 .thumbnails
     width: 33.333333%
-    rem-fallback( max-height, 300px )
-    rem-fallback( padding, 16px 8px )
+    rem-fallback( padding, 16px 24px )
     rem-fallback( margin-bottom, 24px )
     transition( all, 0.25s )
     &:hover
         background: wf_background-thumbnails
 .thumbnails__img
     width 100%
+    rem-fallback( margin-bottom, 6px )
     rem-fallback( max-height, 210px )
