--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -179,6 +179,9 @@ block content
 block footer
     include includes/footer.jade
 
+block script
     script.
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
         var addressRsts = []
+
+    include includes/script.jade    
