--- a/_mockUp/src/jade/includes/layout.jade
+++ b/_mockUp/src/jade/includes/layout.jade
@@ -13,12 +13,12 @@ head
     link(rel="icon" type="image/png" href="")
     block style
         link(rel="stylesheet" href="../css/main.css")
-        
+
 body
     block header
-    
+
     block content
-    
+
     block footer
-        
-    include script.jade
+
+    block script
