--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -78,3 +78,7 @@ block content
 
 block footer
     include includes/footer.jade
+
+block script
+    script(src="js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
