--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -13,12 +13,17 @@ block content
     div#slideMap.parallax__img
     div.parallax__body
         p Info Restaurant
-        
+
     div.parallax__img.parallax__img--heighteen
 
 block footer
     include includes/footer.jade
 
+
+
+block script
     script.
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
         var addressRsts = []
+        
+    include includes/script.jade
