--- a/_mockUp/src/jade/restaurants.jade
+++ b/_mockUp/src/jade/restaurants.jade
@@ -13,8 +13,12 @@ block content
     div.parallax__img.parallax__img--sixteen
     div.parallax__body
         p Galerie
-        
+
     div.parallax__img.parallax__img--seventeen
 
 block footer
     include includes/footer.jade
+
+block script
+    script(src="js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
