Change jade's layout : delete script.jade

--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -77,5 +77,8 @@ block script
         var addressRdv = "Rue Rogier 80, 5000 Namur, Belgique"
         var addressRsts = ["Rue des Brasseurs 40, 5000 Namur, Belgique", "Rue de Bruxelles 10, 5000 Namur, Belgique", "Boulevard d'Herbatte 30, 5000 Namur, Belgique"]
 
-    include includes/script.jade
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
+    script(src="../js/vendor/jquery.js")
+    script(src="../js/script.js")
     script(src="../js/fresco.js")
