--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -25,5 +25,9 @@ block script
     script.
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
         var addressRsts = []
-        
-    include includes/script.jade
+
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
+    script(src="../js/vendor/jquery.js")
+    script(src="../js/script.js")
+    script(src="../js/fresco.js")
