--- a/_mockUp/src/jade/blog.jade
+++ b/_mockUp/src/jade/blog.jade
@@ -19,8 +19,28 @@ block content
         p Actualités
 
     div.parallax__img.parallax__img--fourteen
-    div.parallax__body
-        p Galerie
+    div(itemscope itemtype="http://schema.org/ImageGallery").parallax__body
+        h3(itemprop="headline") Nos souvenirs à travers tous nos Rallye
+        - var numberPhoto = 0
+
+        div(itemscope itemrprop="about")
+        while numberPhoto < 20
+            div.inline-block.gallery
+                a(itemprop="url" href="../css/images/mockUp/exempleGallery.jpg" data-fresco-group="unique_name").fresco
+                    img(itemprop="image" src="../css/images/mockUp/exempleGallery.jpg").gallery__img
+            - numberPhoto++
+        div.pagination
+                span.inline-block.pagination__element
+                    a(href="#").block.removeLink.pagination__element--links &lang;&lang;
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 1
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 2
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 3
+                span.inline-block.pagination__element
+                    a(href="#").block.removeLink.pagination__element--links &rang;&rang;
+
 
     div.parallax__img.parallax__img--fiveteen
 
@@ -28,5 +48,6 @@ block footer
     include includes/footer.jade
 
 block script
-    include includes/script.jade
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="../js/vendor/jquery.js")
     script(src="../js/fresco.js")
