--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -184,4 +184,7 @@ block script
         var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
         var addressRsts = []
 
-    include includes/script.jade    
+    script(src="../js/vendor/modernizr-2.6.2.min.js")
+    script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
+    script(src="../js/vendor/jquery.js")
+    script(src="../js/script.js")
