Restaurants.jade : done
Need to do now : Actualité (design for news) and restaurant.jade

--- a/_mockUp/src/jade/blog.jade
+++ b/_mockUp/src/jade/blog.jade
@@ -20,7 +20,7 @@ block content
 
     div.parallax__img.parallax__img--fourteen
     div(itemscope itemtype="http://schema.org/ImageGallery").parallax__body
-        h3(itemprop="headline") Nos souvenirs à travers tous nos Rallye
+        h3(itemprop="headline") Nos souvenirs à travers tous nos Rallyes
         - var numberPhoto = 0
 
         div(itemscope itemrprop="about")
