--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -23,8 +23,8 @@ block footer
 
 block script
     script.
-        var addressRdv = "Rue Peetermans 80, 4100 Seraing, Belgique"
-        var addressRsts = []
+        var addressRdv = "Boulevard Piercot 40, 4400 Liège, Belgique"
+        var addressRsts = ["Boulevard Piercot 40, 4400 Liège, Belgique"]
 
     script(src="../js/vendor/modernizr-2.6.2.min.js")
     script(src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDHJ3p-sn1Y5tJGrzH9MF5cbR5sdsDmhfg&sensor=false")
