--- a/_mockUp/src/jade/restaurants.jade
+++ b/_mockUp/src/jade/restaurants.jade
@@ -11,8 +11,34 @@ block header
 
 block content
     div.parallax__img.parallax__img--sixteen
-    div.parallax__body
-        p Galerie
+    div(itemscope itemtype="http://schema.org/Thing").parallax__body
+        - var numberItem = 0
+        div.position--relative
+            h3(itemprop="headline").gamma Nous vous conseillons ces adresses
+            form.forms__search.forms__search--right
+                input(itemprop="object" type="text" placeholder="Recherche par région").input__text
+                input(itemprop="target" type="submit" value="S'inscrire").search__submit
+                
+            while numberItem < 6
+                div(itemscope itemtype="http://schema.org/Restaurant").inline-block.thumbnails
+                    a(itemprop="url" href="restaurant.html").removeLink
+                        h4(itemprop="name").delta
+                            | Chez René,
+                            span(itemprop="addressLocality").span--spacing Liège
+                        img(itemprop="image" src="../css/images/mockUp/exempleRest.jpg").thumbnails__img
+                - numberItem++
+            div.pagination
+                span.inline-block.pagination__element
+                    a(href="#").block.removeLink.pagination__element--links &lang;&lang;
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 1
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 2
+                span.inline-block.pagination__element
+                    a(href="#").block.pagination__element--links 3
+                span.inline-block.pagination__element
+                    a(href="#").block.removeLink.pagination__element--links &rang;&rang;
+        
 
     div.parallax__img.parallax__img--seventeen
 
