fix bug and add content

--- a/_mockUp/src/jade/evenement.jade
+++ b/_mockUp/src/jade/evenement.jade
@@ -19,9 +19,9 @@ block content
         h3(itemprop="attendee").gamma
             | Resto-Rallye de
             span(itemprop="location").span--spacing Namur
-        p(itemprop="description") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsum, tenetur. Molestias nihil tenetur amet, aliquid ipsa inventore officiis aperiam sapiente esse, dolorum, recusandae obcaecati sed perferendis possimus expedita magni!
-        p(itemprop="description") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsum, tenetur. Molestias nihil tenetur amet, aliquid ipsa inventore officiis aperiam sapiente esse, dolorum, recusandae obcaecati sed perferendis possimus expedita magni!
-        p(itemprop="description") Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, ipsum, tenetur. Molestias nihil tenetur amet, aliquid ipsa inventore officiis aperiam sapiente esse, dolorum, recusandae obcaecati sed perferendis possimus expedita magni!
+        p(itemprop="description") En ce mardi soir, nos gastronomade nous ont rejoins à la salle des fêtes de la commune. Pour ensuite nous diriger vers le premier restaurant, l'ambiance y été festive quand René, le patron, nous a accuilli pour gouter la premier entrée froide : le foie gras de canard.
+        p(itemprop="description") Après quelques verres et une animation de notre hôte, nous nous sommes diriger vers le deuxième restaurant tout en traversant la gare de Namure.
+        p(itemprop="description") Et voilà
 
     div.parallax__img.parallax__img--ten
     div(itemscope itemtype="http://schema.org/Thing").parallax__body
@@ -51,7 +51,7 @@ block content
         div(itemscope itemrprop="about")
         while numberPhoto < 10
             div.inline-block.gallery
-                a(itemprop="url" href="../css/images/mockUp/exempleGallery.jpg" data-fresco-group="unique_name").fresco
+                a(itemprop="url" href="../css/images/mockUp/exempleGallery1.jpg" data-fresco-group="unique_name").fresco
                     img(itemprop="image" src="../css/images/mockUp/exempleGallery.jpg").gallery__img
             - numberPhoto++
         div.pagination
