Fix some errors

--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -17,7 +17,7 @@ block content
                 | Rendez-vous le
                 span(itemprop="startDate").span--spacing 21 Octobre
                 | à
-                span(itemprop="location") Seraing
+                span(itemprop="location").span--spacing Seraing
             p(itemprop="description") Pour la première fois dans l'historie de Resto-Rallye, nous organisons un évènement dans la ville de Seraing. Trois restaurants de la ville ont accepté de recevoir nos gastronomades et leurs faire découvrir les spécialités de leurs établissements.
             p(itemprop="description") Que vous soyez habitué ou encore novice à ses évènements, nous vous invitons chaleureusement à nous rejoindre ce mardi 21 Octobre pour de nouvelle découverte gastronomique.
             p(itemprop="description")
