--- a/_mockUp/src/jade/restaurants.jade
+++ b/_mockUp/src/jade/restaurants.jade
@@ -14,7 +14,7 @@ block content
     div(itemscope itemtype="http://schema.org/Thing").parallax__body
         - var numberItem = 0
         div.position--relative
-            h3(itemprop="headline").gamma Nous vous conseillons ces adresses
+            h3(itemprop="headline").gamma Les habitués du Resto Rallye
             form.forms__search.forms__search--right
                 input(itemprop="object" type="text" placeholder="Recherche par région").input__text
                 input(itemprop="target" type="submit" value="S'inscrire").search__submit
