--- a/_mockUp/src/styl/ITCSS/components/_components.gallery.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.gallery.styl
@@ -14,6 +14,12 @@
 .gallery
     width: 20%
     rem-fallback( padding, 8px )
+
+.gallery__link
+    transition( all, 0.25s )
+    &:hover
+        opacity 0.6
+
 .gallery__img
     width 100%
     rem-fallback( margin-bottom, 12px )
