--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -37,6 +37,7 @@
 @import "ITCSS/components/_components.footer.styl"
 @import "ITCSS/components/_components.forms.styl"
 @import "ITCSS/components/_components.thumbnails.styl"
+@import "ITCSS/components/_components.restaurant.styl"
 @import "ITCSS/components/_components.gallery.styl"
 @import "ITCSS/components/_components.pagination.styl"
 
