--- a/_mockUp/src/jade/restaurant.jade
+++ b/_mockUp/src/jade/restaurant.jade
@@ -11,9 +11,23 @@ block header
 
 block content
     div#slideMap.parallax__img
-    div.parallax__body
-        p Info Restaurant
-
+    div(itemscope itemtype="http://schema.org/Restaurant").parallax__body
+        div.restaurant
+            h3(itemprop="name").gamma Chez René
+            div.inline-block.restaurant__body
+                h4(itemprop="servesCuisine").delta Cuisine Italienne
+                p(itemprop="about") C'est dans une salle au couleur de son pays que René nous à accuilli pour notre soirée, belle table, jolie menu, tout était au rendez-vous pour passer une agréable soirée.
+                p(itemprop="about") C'est une fois notre assiette face à nous que nous avons put profiter des talents du son cuisinier, les plats étaient un vrai délice, une explosion de saveur.
+                p(itemprop="about") Le service, les plats, la joie, tout était au rendez vous pour cette soirée toute particulière.
+            div.inline-block.restaurant__details
+                h4(itemprop="headline").delta Coordonnées
+                address(itemprop="address")
+                    span.block Boulevard Piercot, n° 46
+                    span.block 4400, Liège
+                div(itemprop="telephone").block.restaurant__details--tel Tel&nbsp;:
+                    span.span--spacing 0471 31 77 91
+                a(href="#" itemprop="url").block www.chezrené.be
+                
     div.parallax__img.parallax__img--heighteen
 
 block footer
